# rholang

./: .clang-format  .gitignore  .ignore  NOTE.md  TODO  ast  bench.md  deliverables.md  how-to-link  justfile  meson.build  playground
compiler/: ilist.hpp
compiler-fuzzing/: .gitignore  .jvmopts  .scalafmt.conf  build.sbt
compiler-fuzzing/src/main/scala/: Ctx.scala  Decl.scala  Expr.scala  Gen.scala  Main.scala  Stmt.scala  Struct.scala  Type.scala  VariablePool.scala
compiler/backend/: codegen.cpp  codegen.hpp  lowerir.cpp  lowerir.hpp
compiler/frontend/: ast2ir.cpp  ast2ir.hpp  error.cpp  error.hpp  mangling.cpp  mangling.hpp  scopedmap.hpp  sema.cpp  sema.hpp  translationunit.hpp  type.cpp  type.hpp
compiler/frontend/ast/: decl.cpp  decl.hpp  declstmt.hpp  expr.cpp  expr.hpp  file.hpp  prettyprint.cpp  prettyprint.hpp  stmt.hpp  visitor.hpp
compiler/frontend/lex/: lexeme.cpp  lexeme.hpp  lexer.cpp  lexer.hpp  token.hpp
compiler/frontend/parse/: error.hpp  parser.cpp  parser.hpp
compiler/ir/: bb.cpp  bb.hpp  builder.cpp  builder.hpp  context.cpp  context.hpp  function.hpp  identifier.hpp  instr.cpp  instr.hpp  module.cpp  module.hpp  phi.cpp  phi.hpp  prettyprint.cpp  prettyprint.hpp  type.cpp  type.hpp  typesets.cpp  typesets.hpp  value.cpp  value.hpp  visitor.hpp
compiler/lir/: bb.cpp  bb.hpp  function.cpp  function.hpp  instr.cpp  instr.hpp  module.cpp  module.hpp  prettyprint.cpp  prettyprint.hpp  register.cpp  register.hpp  value.cpp  value.hpp  visitor.hpp
compiler/tests/: frontend.cpp  translator.cpp
driver/: main.cpp
examples/: foo  foo.rho  linkedlist.rho  playground.rho  tree.rho
frontend/: error.cpp  error.hpp  mangling.cpp  mangling.hpp  pretty.cpp  pretty.hpp  sema.cpp  sema.hpp  translationunit.hpp  type.cpp  type.hpp
frontend/ast/: decl.cpp  decl.hpp  declstmt.hpp  expr.cpp  expr.hpp  file.hpp  prettyprint.cpp  prettyprint.hpp  retstmt.hpp  stmt.hpp  visitor.hpp
frontend/lex/: lexeme.cpp  lexeme.hpp  lexer.cpp  lexer.hpp  span.hpp  token.hpp
frontend/parse/: error.cpp  error.hpp  parser.cpp  parser.hpp
runtime/: alloc.cpp  alloc.hpp  alloc_test.cpp  bin.cpp  bin.hpp  bin_test.cpp  fla.cpp  fla.hpp  fla_test.cpp  gc.cpp  gc.hpp  gc_test.cpp  header.hpp  main_alloc.cpp  main_alloc.hpp  main_alloc_test.cpp  page_size.hpp  runtime.cpp  runtime.hpp  work_stealing_queue.hpp
runtime/test/: bin_test.cpp  fla_test.cpp  gc_test.cpp  main_alloc_test.cpp  runtime_test.cpp
utils/: match.hpp
